syntax = "proto3";


service ProcurementGRPC {
  rpc GetProcurement (ProcurementRequest) returns (ProcurementResponse) {}
}

message ProcurementRequest {
  int64 id = 1;
  int64 amount = 2;
}

message ProcurementResponse {
  int64 amount = 1;
}

